--- a/pom.xml
+++ b/pom.xml
@@ -44,6 +44,15 @@
       <version>${jmh.version}</version>
       <scope>provided</scope>
     </dependency>
+
+    <!-- https://mvnrepository.com/artifact/org.openjdk.jol/jol-core -->
+    <dependency>
+      <groupId>org.openjdk.jol</groupId>
+      <artifactId>jol-core</artifactId>
+      <version>0.16</version>
+      <scope>provided</scope>
+    </dependency>
+
   </dependencies>
 
   <build>
